unpackaged/main/default/objects/Contact/fields/Additional_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Additional_Email_1__c</fullName>
    <description>The first additional email to send data owner requests to</description>
    <label>Additional Email 1</label>
    <type>Email</type>
</CustomField>