unpackaged/main/default/objects/Contact/fields/Additional_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Email_2__c</fullName>
    <description>The second additional email to send data owner requests to</description>
    <label>Additional Email 2</label>
    <type>Email</type>
</CustomField>