unpackaged/main/default/objects/Contact/fields/Additional_Email_3__c.field-meta.xml
<CustomField>
    <fullName>Additional_Email_3__c</fullName>
    <description>The third additional email to send data owner requests to</description>
    <label>Additional Email 3</label>
    <type>Email</type>
</CustomField>