unpackaged/main/default/objects/Contact/fields/AdvertiseOptinDate__c.field-meta.xml
<CustomField>
    <fullName>AdvertiseOptinDate__c</fullName>
    <label>Advertise Optin Date</label>
    <type>DateTime</type>
</CustomField>