unpackaged/main/default/objects/Contact/fields/Advertising_Opt_out__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Opt_out__c</fullName>
    <description>GCT-772 :This field is marked True indicating the customers opt-out in Do Not Sell/Share</description>
    <label>Advertising Opt-out</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>