unpackaged/main/default/objects/Contact/fields/Advertising_Opt_out_Date__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Opt_out_Date__c</fullName>
    <description>GCT-772 :This field is marked with Date indicating the customers opt-out in Do Not Sell/Share</description>
    <label>Advertising Opt-out Date</label>
    <type>DateTime</type>
</CustomField>