unpackaged/main/default/objects/Contact/fields/Audit_OCAPI_API_Response__c.field-meta.xml
<CustomField>
    <fullName>Audit_OCAPI_API_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <description>... describes whether the B2C Commerce OCAPI Response used to update this record should be audited.</description>
    <inlineHelpText>... describes whether the B2C Commerce OCAPI Response used to update this record should be audited.</inlineHelpText>
    <label>Audit B2C Commerce OCAPI Response</label>
    <type>Checkbox</type>
</CustomField>