unpackaged/main/default/objects/Contact/fields/B2C_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>B2C_Customer_ID__c</fullName>
    <description>... represents the internal B2C Commerce customer profile identifier associated to a given contact.</description>
    <externalId>true</externalId>
    <inlineHelpText>... represents the internal B2C Commerce customer profile identifier associated to a given contact.</inlineHelpText>
    <label>B2C Customer ID</label>
    <length>250</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>