unpackaged/main/default/objects/Contact/fields/B2C_Customer_No__c.field-meta.xml
<CustomField>
    <fullName>B2C_Customer_No__c</fullName>
    <description>... represents the external / customer-facing B2C Commerce customer profile number associated to a given Contact.</description>
    <inlineHelpText>... represents the external / customer-facing B2C Commerce customer profile number associated to a given Contact.</inlineHelpText>
    <label>B2C Customer No</label>
    <length>250</length>
    <type>Text</type>
</CustomField>