unpackaged/main/default/objects/Contact/fields/B2C_CustomerList_ID__c.field-meta.xml
<CustomField>
    <fullName>B2C_CustomerList_ID__c</fullName>
    <description>... represents the B2C Commerce storefront customer list that is associated to a given Contact.</description>
    <inlineHelpText>... represents the B2C Commerce storefront customer list that is associated to a given Contact.</inlineHelpText>
    <label>B2C CustomerList ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>