unpackaged/main/default/objects/Contact/fields/B2C_Date_Created__c.field-meta.xml
<CustomField>
    <fullName>B2C_Date_Created__c</fullName>
    <description>... represents the date / time that a given b2C Commerce customer profile represented as a Contact was created in Service Cloud.</description>
    <inlineHelpText>... represents the date / time that a given b2C Commerce customer profile represented as a Contact was created in Service Cloud.</inlineHelpText>
    <label>B2C Date Created</label>
    <type>DateTime</type>
</CustomField>