unpackaged/main/default/objects/Contact/fields/B2C_Date_Last_Visited__c.field-meta.xml
<CustomField>
    <fullName>B2C_Date_Last_Visited__c</fullName>
    <description>... represents the date that a given B2C Commerce Customer Profile last visited their profile via. storefront interface.</description>
    <inlineHelpText>... represents the date that a given B2C Commerce Customer Profile last visited their profile via. storefront interface.</inlineHelpText>
    <label>B2C Date Last Visited</label>
    <type>DateTime</type>
</CustomField>