unpackaged/main/default/objects/Contact/fields/B2C_Date_Previous_Visit__c.field-meta.xml
<CustomField>
    <fullName>B2C_Date_Previous_Visit__c</fullName>
    <description>... represents the previous storefront visit date for a B2C Commerce customer profile.</description>
    <inlineHelpText>... represents the previous storefront visit date for a B2C Commerce customer profile.</inlineHelpText>
    <label>B2C Date Previous Visit</label>
    <type>DateTime</type>
</CustomField>