unpackaged/main/default/objects/Contact/fields/B2C_Disable_Integration__c.field-meta.xml
<CustomField>
    <fullName>B2C_Disable_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>... describes if integration between B2C Commerce and Service Cloud is disabled for a given Contact.</description>
    <inlineHelpText>... describes if integration between B2C Commerce and Service Cloud is disabled for a given Contact.</inlineHelpText>
    <label>B2C Disable Integration</label>
    <type>Checkbox</type>
</CustomField>