unpackaged/main/default/objects/Contact/fields/B2C_Gender_ID__c.field-meta.xml
<CustomField>
    <fullName>B2C_Gender_ID__c</fullName>
    <description>... describes the B2C Commerce Gender ID that is assigned within the B2C Commerce Customer Profile</description>
    <inlineHelpText>... describes the B2C Commerce Gender ID that is assigned within the B2C Commerce Customer Profile</inlineHelpText>
    <label>B2C Gender ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>