unpackaged/main/default/objects/Contact/fields/B2C_Instance__c.field-meta.xml
<CustomField>
    <fullName>B2C_Instance__c</fullName>
    <description>... represents the parent B2C Instance for the CustomerList record related to a given Contact.</description>
    <formula>B2C_CustomerList__r.B2C_Instance__r.Name</formula>
    <inlineHelpText>... represents the parent B2C Instance for the CustomerList record related to a given Contact.</inlineHelpText>
    <label>B2C Instance</label>
    <type>Text</type>
</CustomField>