unpackaged/main/default/objects/Contact/fields/B2C_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>B2C_Integration_Status__c</fullName>
    <description>... describes the last successful integration status for a given B2C Commerce customer profile represented as a Contact.</description>
    <inlineHelpText>... describes the last successful integration status for a given B2C Commerce customer profile represented as a Contact.</inlineHelpText>
    <label>B2C Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>B2C_Integration_Status</valueSetName>
    </valueSet>
</CustomField>