unpackaged/main/default/objects/Contact/fields/B2C_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>B2C_Job_Title__c</fullName>
    <description>... describes the job title associated with a given B2C Commerce Customer Profile.</description>
    <inlineHelpText>... describes the job title associated with a given B2C Commerce Customer Profile.</inlineHelpText>
    <label>B2C Job Title</label>
    <length>250</length>
    <type>Text</type>
</CustomField>