unpackaged/main/default/objects/Contact/fields/B2C_Preferred_Locale__c.field-meta.xml
<CustomField>
    <fullName>B2C_Preferred_Locale__c</fullName>
    <description>... describes the preferred language locale for a given B2C Commerce customer profile (ex. en, en_US, etc).</description>
    <inlineHelpText>... describes the preferred language locale for a given B2C Commerce customer profile (ex. en, en_US, etc).</inlineHelpText>
    <label>B2C Preferred Locale</label>
    <length>25</length>
    <type>Text</type>
</CustomField>