unpackaged/main/default/objects/Contact/fields/B2C_Salutation__c.field-meta.xml
<CustomField>
    <fullName>B2C_Salutation__c</fullName>
    <description>... describes the salutation configured for a given B2C Commerce customer profile.</description>
    <inlineHelpText>... describes the salutation configured for a given B2C Commerce customer profile.</inlineHelpText>
    <label>B2C Salutation</label>
    <length>25</length>
    <type>Text</type>
</CustomField>