unpackaged/main/default/objects/Contact/fields/B2C_Second_Name__c.field-meta.xml
<CustomField>
    <fullName>B2C_Second_Name__c</fullName>
    <description>... represents the alternate 2nd name associated to a B2C Commerce customer profile (ex. 2nd surname).</description>
    <inlineHelpText>... represents the alternate 2nd name associated to a B2C Commerce customer profile (ex. 2nd surname).</inlineHelpText>
    <label>B2C Second Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>