unpackaged/main/default/objects/Contact/fields/B2C_Suffix__c.field-meta.xml
<CustomField>
    <fullName>B2C_Suffix__c</fullName>
    <description>... represents the name suffix associated to a given B2C Commerce customer profile (ex. displayed after the name; Esq).</description>
    <inlineHelpText>... represents the name suffix associated to a given B2C Commerce customer profile (ex. displayed after the name; Esq).</inlineHelpText>
    <label>B2C Suffix</label>
    <length>100</length>
    <type>Text</type>
</CustomField>