unpackaged/main/default/objects/Contact/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bass</fullName>
            </value>
            <value>
                <fullName>Calvin Klein</fullName>
                <label>Calvin Klein</label>
            </value>
            <value>
                <fullName>Heritage Ecom</fullName>
            </value>
            <value>
                <fullName>IZOD</fullName>
            </value>
            <value>
                <fullName>IZOD.com</fullName>
            </value>
            <value>
                <fullName>Partner Brands</fullName>
                <label>Partner Brands</label>
            </value>
            <value>
                <fullName>Speedo</fullName>
            </value>
            <value>
                <fullName>Style Bureau</fullName>
                <label>Style Bureau</label>
            </value>
            <value>
                <fullName>Tommy Hilfiger</fullName>
            </value>
            <value>
                <fullName>Van Heusen</fullName>
            </value>
            <value>
                <fullName>Van Heusen.com</fullName>
                <label>Van Heusen.com</label>
            </value>
            <value>
                <fullName>Warners.com</fullName>
            </value>
            <value>
                <fullName>Speedo USA</fullName>
            </value>
            <value>
                <fullName>Van Heusen.com (VHE)</fullName>
            </value>
            <value>
                <fullName>True&amp;Co</fullName>
            </value>
            <value>
                <fullName>Warner</fullName>
            </value>
            <value>
                <fullName>Olga</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>