unpackaged/main/default/objects/Contact/fields/Brand_Id__c.field-meta.xml
<CustomField>
    <fullName>Brand_Id__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brand_Id</valueSetName>
    </valueSet>
</CustomField>