unpackaged/main/default/objects/Contact/fields/BrandIdAPIValue__c.field-meta.xml
<CustomField>
    <fullName>BrandIdAPIValue__c</fullName>
    <formula>TEXT(Brand_Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BrandIdAPIValue</label>
    <type>Text</type>
</CustomField>