unpackaged/main/default/objects/Contact/fields/Bulk_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Buyer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bulk Buyer</label>
    <type>Checkbox</type>
</CustomField>