unpackaged/main/default/objects/Contact/fields/Bulk_Buyer_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Buyer_Update_Date__c</fullName>
    <label>Bulk Buyer Update Date</label>
    <type>DateTime</type>
</CustomField>