unpackaged/main/default/objects/Contact/fields/Bulk_Buyer_Update_Reason__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Buyer_Update_Reason__c</fullName>
    <label>Bulk Buyer Update Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>