unpackaged/main/default/objects/Contact/fields/BulkBuyerOld__c.field-meta.xml
<CustomField>
    <fullName>BulkBuyerOld__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BulkBuyerOld</label>
    <type>Checkbox</type>
</CustomField>