unpackaged/main/default/objects/Contact/fields/Campaign_Signup_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Signup_Date__c</fullName>
    <label>Campaign Signup Date</label>
    <type>Date</type>
</CustomField>