unpackaged/main/default/objects/Contact/fields/Contact_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_18_Digit_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact 18 Digit ID</label>
    <type>Text</type>
</CustomField>