unpackaged/main/default/objects/Contact/fields/Country_ds__c.field-meta.xml
<CustomField>
    <fullName>Country_ds__c</fullName>
    <description>To Capture the country values for CK brand</description>
    <label>Country DS</label>
    <length>5</length>
    <type>Text</type>
</CustomField>