unpackaged/main/default/objects/Contact/fields/CountryOfCapture__c.field-meta.xml
<CustomField>
    <fullName>CountryOfCapture__c</fullName>
    <label>Country of Capture</label>
    <length>20</length>
    <type>Text</type>
</CustomField>