unpackaged/main/default/objects/Contact/fields/Created_by_id_18_character__c.field-meta.xml
<CustomField>
    <fullName>Created_by_id_18_character__c</fullName>
    <formula>CASESAFEID( CreatedById )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by id 18 character</label>
    <type>Text</type>
</CustomField>