unpackaged/main/default/objects/Contact/fields/CreatedByMethod__c.field-meta.xml
<CustomField>
    <fullName>CreatedByMethod__c</fullName>
    <label>Created By Method</label>
    <length>20</length>
    <type>Text</type>
</CustomField>