unpackaged/main/default/objects/Contact/fields/CSR_Trigger_PB__c.field-meta.xml
<CustomField>
    <fullName>CSR_Trigger_PB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSR Trigger PB</label>
    <type>Checkbox</type>
</CustomField>