unpackaged/main/default/objects/Contact/fields/Current_Point_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Point_Balance__c</fullName>
    <label>Current Point Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>