unpackaged/main/default/objects/Contact/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <description>Set as external Id to get it indexed</description>
    <externalId>true</externalId>
    <label>Customer Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>