unpackaged/main/default/objects/Contact/fields/CustomerRequestDNM__c.field-meta.xml
<CustomField>
    <fullName>CustomerRequestDNM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CustomerRequestDNM</label>
    <type>Checkbox</type>
</CustomField>