unpackaged/main/default/objects/Contact/fields/CustomerRequestDNMOld__c.field-meta.xml
<CustomField>
    <fullName>CustomerRequestDNMOld__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CustomerRequestDNMOld</label>
    <type>Checkbox</type>
</CustomField>