unpackaged/main/default/objects/Contact/fields/DataOwner_Subtype__c.field-meta.xml
<CustomField>
    <fullName>DataOwner_Subtype__c</fullName>
    <description>Track customer privacy request type ex: unsubscribe,Delete My Data..etc</description>
    <label>Sub Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unsubscribe</fullName>
            </value>
            <value>
                <fullName>Access My Data</fullName>
            </value>
            <value>
                <fullName>Delete My Data</fullName>
            </value>
            <value>
                <fullName>Rectify My Data</fullName>
            </value>
            <value>
                <fullName>Do Not Sell/Share</fullName>
            </value>
            <value>
                <fullName>Advertising/Sharing Opt-Out</fullName>
                <isActive>false</isActive>
                <label>Advertising/Sharing Opt-Out</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>