unpackaged/main/default/objects/Contact/fields/DateOfDoNotDirectMail__c.field-meta.xml
<CustomField>
    <fullName>DateOfDoNotDirectMail__c</fullName>
    <label>Date Of Do Not Direct Mail</label>
    <type>Date</type>
</CustomField>