unpackaged/main/default/objects/Contact/fields/Decoy__c.field-meta.xml
<CustomField>
    <fullName>Decoy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decoy</label>
    <type>Checkbox</type>
</CustomField>