unpackaged/main/default/objects/Contact/fields/DirectMailOptin__c.field-meta.xml
<CustomField>
    <fullName>DirectMailOptin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Mail Optin</label>
    <type>Checkbox</type>
</CustomField>