unpackaged/main/default/objects/Contact/fields/DirectMailUndeliverable__c.field-meta.xml
<CustomField>
    <fullName>DirectMailUndeliverable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Mail Undeliverable</label>
    <type>Checkbox</type>
</CustomField>