unpackaged/main/default/objects/Contact/fields/Do_Not_Sync_with_SFMC__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Sync_with_SFMC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field value is true, then SFMC will not sync this record with it.</description>
    <label>Do Not Sync with SFMC</label>
    <type>Checkbox</type>
</CustomField>