unpackaged/main/default/objects/Contact/fields/DoNotDirectMailReason__c.field-meta.xml
<CustomField>
    <fullName>DoNotDirectMailReason__c</fullName>
    <label>Do Not Direct Mail Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>A - Email Address Only</label>
            </value>
            <value>
                <fullName>HM</fullName>
            </value>
            <value>
                <fullName>HN</fullName>
            </value>
            <value>
                <fullName>HNS</fullName>
            </value>
            <value>
                <fullName>HS</fullName>
            </value>
            <value>
                <fullName>HT</fullName>
            </value>
            <value>
                <fullName>HV</fullName>
            </value>
            <value>
                <fullName>HVS</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>NHS</fullName>
            </value>
            <value>
                <fullName>N</fullName>
                <label>N - NCOA</label>
            </value>
            <value>
                <fullName>NS</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>S</fullName>
                <label>S - Standardization</label>
            </value>
            <value>
                <fullName>ST</fullName>
            </value>
            <value>
                <fullName>TS</fullName>
            </value>
            <value>
                <fullName>T</fullName>
                <label>T - Store Address</label>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
            <value>
                <fullName>VS</fullName>
            </value>
            <value>
                <fullName>VT</fullName>
            </value>
            <value>
                <fullName>U</fullName>
                <isActive>false</isActive>
                <label>U - Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>