unpackaged/main/default/objects/Contact/fields/Ecomm_Connected__c.field-meta.xml
<CustomField>
    <fullName>Ecomm_Connected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ecomm Connected</label>
    <type>Checkbox</type>
</CustomField>