unpackaged/main/default/objects/Contact/fields/Ecomm_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Ecomm_Customer_ID__c</fullName>
    <description>It is a unique key that is generated by SFCC</description>
    <externalId>true</externalId>
    <label>Ecomm Customer ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>