unpackaged/main/default/objects/Contact/fields/EcommSite__c.field-meta.xml
<CustomField>
    <fullName>EcommSite__c</fullName>
    <formula>IF(Country_ds__c == &quot;US&quot; &amp;&amp; ISPICKVAL(Brand_Id__c , &quot;2&quot;), &quot;CK-US&quot;,
IF(Country_ds__c == &quot;CA&quot; &amp;&amp; ISPICKVAL(Brand_Id__c , &quot;2&quot;), &quot;CK-CA&quot;,
IF(Country_ds__c == &quot;US&quot; &amp;&amp; ISPICKVAL(Brand_Id__c , &quot;1&quot;), &quot;TH-US&quot;,
&quot;None&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ecomm Site</label>
    <type>Text</type>
</CustomField>