unpackaged/main/default/objects/Contact/fields/Email_Address_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_Reason_Code__c</fullName>
    <label>Email Address Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Verification Success : Email Update</fullName>
            </value>
            <value>
                <fullName>Verification Success : Unable to Update in SC</fullName>
            </value>
            <value>
                <fullName>Verification Declined : No Email Update</fullName>
            </value>
            <value>
                <fullName>Verification Failure : No Customer&#39;s response</fullName>
            </value>
            <value>
                <fullName>Verfication Success: login email is already in use</fullName>
            </value>
            <value>
                <fullName>Verification Success : R2R update</fullName>
            </value>
            <value>
                <fullName>Verification Declined: No personal data update</fullName>
            </value>
            <value>
                <fullName>Verification Failure: No customer response</fullName>
            </value>
            <value>
                <fullName>Verification Success: Do Not Sell/ Share Approved</fullName>
            </value>
            <value>
                <fullName>Verification Declined: No Advertising Opt Out</fullName>
            </value>
            <value>
                <fullName>Tealium Request: Advertise OptIn</fullName>
            </value>
            <value>
                <fullName>Tealium Request: Advertise OptOut</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>