unpackaged/main/default/objects/Contact/fields/Email_Opt_in_Date_formula__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_in_Date_formula__c</fullName>
    <formula>IF(CreatedByMethod__c=&#39;API&#39;,DATEVALUE(EmailOptInDate__c)
,CASE(Source_System__c,
&quot;POS&quot;, DATEVALUE(EmailOptInDate__c) + 1,
&quot;Merkle&quot;, DATEVALUE(EmailOptInDate__c) + 1,
&quot;Outside Lists&quot;, DATEVALUE(EmailOptInDate__c) + 1,
&quot;WiFi&quot;, DATEVALUE(EmailOptInDate__c) + 1,
DATEVALUE(EmailOptInDate__c))

)</formula>
    <label>Email Opt-in Date</label>
    <type>Date</type>
</CustomField>