unpackaged/main/default/objects/Contact/fields/Email_Updated_by_CSR__c.field-meta.xml
<CustomField>
    <fullName>Email_Updated_by_CSR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Updated by CSR</label>
    <type>Checkbox</type>
</CustomField>