unpackaged/main/default/objects/Contact/fields/EmailDeliverabilityStatus__c.field-meta.xml
<CustomField>
    <fullName>EmailDeliverabilityStatus__c</fullName>
    <label>Email Deliverability Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>normal</fullName>
                <default>true</default>
                <label>normal</label>
            </value>
            <value>
                <fullName>held</fullName>
            </value>
            <value>
                <fullName>bounce</fullName>
            </value>
            <value>
                <fullName>unsub</fullName>
            </value>
            <value>
                <fullName>deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>