unpackaged/main/default/objects/Contact/fields/EmailOptDownDate__c.field-meta.xml
<CustomField>
    <fullName>EmailOptDownDate__c</fullName>
    <label>Email Opt Down Date</label>
    <type>Date</type>
</CustomField>