unpackaged/main/default/objects/Contact/fields/EmailOptDownStatus__c.field-meta.xml
<CustomField>
    <fullName>EmailOptDownStatus__c</fullName>
    <label>Email Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>receive ALL</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1 or 2 per week</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>max 2 per month</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>